fix: load rooms from backend to avoid latency from Matrix server - MEED-9262 - Meeds-io/MIPs#163 (#241)
Depending on Matrix server performance, the rooms of the current user do not contain the full list. When creating a new space, the room is sometimes returned very late and the user can not send messages or interact on it.
The fix will check the list of rooms returned from Matrix server and will add the missing room after loading their identifiers from the Meeds database, in addition, it avoids issues when sending new messages on those rooms.